--- a/todoapp/src/styles/Todolist.css
+++ b/todoapp/src/styles/Todolist.css
@@ -29,5 +29,5 @@
   margin-top: 0.2rem;
   color: black;
   font-family: "Oxlade Demo";
-  text-shadow: 1px 1px rgb(190, 20, 20);
+  text-shadow: 1px 1px 8px rgb(190, 20, 20);
 }
