--- a/todoapp/src/styles/todo.css
+++ b/todoapp/src/styles/todo.css
@@ -1,7 +1,51 @@
 .completed {
+  /* color: red; */
+  /* list-style: none; */
+  /* text-transform: uppercase; */
+  /* font-size: 24px; */
+  /* text-decoration: line-through; */
+}
+
+.Todo {
+  display: flex;
+  margin: 0 -1rem 4px;
+  padding: 0.5rem 3rem;
+  justify-content: space-between;
+  align-items: center;
+  background-color: rgba(255, 255, 255, 0.2);
+  border-radius: 10px;
+  font-size: 0.8rem;
+  text-transform: capitalize;
+}
+
+.Todo-task {
+  position: relative;
+  transition: opacity 0.4s linear;
+}
+
+.Todo-task.completed {
+  opacity: 0.8;
+  transition: 1s ease-in;
   color: red;
-  list-style: none;
-  text-transform: uppercase;
-  font-size: 24px;
-  text-decoration: line-through;
+  font-size: 20px;
+}
+
+.Todo-task.completed:before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 50%;
+  left: -0.5rem;
+  display: block;
+  width: 0%;
+  height: 2px;
+  background: white;
+  animation: strikeitem 1.5s ease-out 0s forwards;
+  color: red;
+}
+
+@keyframes strikeitem {
+  to {
+    width: 90px;
+  }
 }
