--- a/todoapp/src/styles/Todolist.css
+++ b/todoapp/src/styles/Todolist.css
@@ -4,9 +4,20 @@
 
   background-color: #ff6666;
   color: #fff;
-  box-shadow: -20px -20px 0px 0px rgba(100, 100, 100, 0.5);
+  box-shadow: -12px -13px 2px 1px rgba(100, 100, 100, 0.5);
   margin: 9rem auto;
   border-radius: 10px;
+}
+
+.TodoList img {
+  width: 100px;
+  margin-top: 1rem;
+  /* background-color: aqua; */
+  position: absolute;
+  left: 60%;
+  top: 22%;
+  /* box-shadow: -5px -3px 2px 1px rgba(100, 100, 100, 0.5); */
+  border-radius: 20px;
 }
 
 .TodoList ul {
@@ -47,4 +58,46 @@
   -webkit-appearance: none;
   cursor: pointer;
   color: white;
+}
+
+.Todo-edit-form {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.Todo-edit-form label {
+  min-width: 100%;
+  margin-bottom: 0.5rem;
+  font-size: 1rem;
+}
+
+.Todo-edit-form input {
+  flex-grow: 1;
+  border: none;
+  background-color: white;
+  font-size: initial;
+}
+
+.Todo-edit-form button {
+  padding: 0 1.3rem;
+  border: none;
+  background: #ff6666;
+  color: white;
+  text-transform: uppercase;
+  font-weight: bold;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  margin-left: 5px;
+  cursor: pointer;
+  transition: background 0.2s ease-out;
+}
+
+.Todo-edit-form button:hover {
+  background-color: green;
+}
+
+.Todo-edit-form input,
+.Todo-edit-form button {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  height: 2.5rem;
+  margin-left: 2rem;
 }
