--- a/todoapp/src/styles/todo.css
+++ b/todoapp/src/styles/todo.css
@@ -1,10 +1,9 @@
-.completed {
+/* .completed {
   /* color: red; */
-  /* list-style: none; */
-  /* text-transform: uppercase; */
-  /* font-size: 24px; */
-  /* text-decoration: line-through; */
-}
+/* list-style: none; */
+/* text-transform: uppercase; */
+/* font-size: 24px; */
+/* text-decoration: line-through; */
 
 .Todo {
   display: flex;
@@ -49,3 +48,5 @@
     width: 90px;
   }
 }
+
+/* ================ */
